<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/androidkullanicietkilesimi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_kullanici_etkilesimi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/sayfa1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sayfa_1"
        app:layout_constraintBottom_toBottomOf="@+id/sayfa2Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/androidkullanicietkilesimi"
        app:layout_constraintEnd_toStartOf="@id/sayfa2Button"/>

    <Button
        android:id="@+id/sayfa2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sayfa_2"
        app:layout_constraintBottom_toBottomOf="@+id/sayfa3Button"
        app:layout_constraintStart_toEndOf="@id/sayfa1Button"
        app:layout_constraintTop_toBottomOf="@id/androidkullanicietkilesimi"
        app:layout_constraintEnd_toStartOf="@id/sayfa3Button"/>

    <Button
        android:id="@+id/sayfa3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sayfa_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sayfa2Button"
        app:layout_constraintTop_toBottomOf="@id/androidkullanicietkilesimi" />

    <Button
        android:id="@+id/sayfa4Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sayfa_4"
        app:layout_constraintTop_toBottomOf="@id/sayfa1Button"
        app:layout_constraintStart_toStartOf="@id/sayfa2Button"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/buttonDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15dp"/>

    <Switch
        android:id="@+id/switchDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:checked="false"
        android:text="AydinlikMod"
        android:thumbTint="@color/black"
        android:trackTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />


</androidx.constraintlayout.widget.ConstraintLayout>