<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SnackBar.SnackBarOlusturma">

    <TextView
        android:id="@+id/snackBarOlusturma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SnackBar Olusturma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/buttonNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normall"
        app:layout_constraintStart_toStartOf="@id/snackBarOlusturma"
        app:layout_constraintEnd_toEndOf="@id/snackBarOlusturma"
        app:layout_constraintTop_toBottomOf="@id/snackBarOlusturma"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/buttonGeriDonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geri_donus"
        app:layout_constraintStart_toStartOf="@id/buttonNormal"
        app:layout_constraintEnd_toEndOf="@id/buttonNormal"
        app:layout_constraintTop_toBottomOf="@id/buttonNormal"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/buttonOzel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ozell"
        app:layout_constraintStart_toStartOf="@id/buttonGeriDonus"
        app:layout_constraintEnd_toEndOf="@id/buttonGeriDonus"
        app:layout_constraintTop_toBottomOf="@id/buttonGeriDonus"
        android:layout_marginTop="50dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>